2004-12-05  NT  <nt@be.to>
	* tlink.rb: adjusted to ruby 1.8.2

2004-12-05  Kazuhiko  <kazuhiko@fdiary.net>
	* category.rb: delete category icon setting if 'none' is selected

2004-11-29 zunda <zunda at freeshell.org>
	* zh/search_control.rb: forgot to follow revision of search_control.rb

2004-11-29 zunda <zunda at freeshell.org>
	* makerss.rb: @conf.icon can be empty

2004-11-29 zunda <zunda at freeshell.org>
	* ja/makerss.rb: better description of options,
	thanks to TADA Tadashi <sho@spc.gr.jp>

2004-11-28 zunda <zunda at freeshell.org>
	* makerss.rb, {ja,en,zh}/makerss.rb: added option to hide
	tsukkomi-items from rss, thanks to Keiichiro SAKURAI
	<kei-tdiary at ksakurai.nwr.jp>

2004-11-24 zunda <zunda at freeshell.org>
	* makerss.rb: does not include TSUKKOMI when it is hidden,
	thanks to Mr. Hiromitsu Takagi (http://takagi-hiromitsu.jp/diary/20041124.html#p02)

2004-11-18 zunda <zunda at freeshell.org>
	* {en,zh}/makerss.rb: fixed typo, thanks to vette <vette at mail.ne.jp>
	* {ja,en,zh}/makerss.rb: reflects form values only when OK button has 
	been pushed, thanks to vette <vette at mail.ne.jp>

2004-11-16 zunda <zunda at freeshell.org>
  * makerss.rb, {ja,en,zh}/makerss.rb: more options:
		- hidecomment, hidecontent, shortdescription: configurable thru. browser
		- @conf.icon @conf.description: configurable thru. browser in the future
		- file, url, partial: configurable in tdiary.conf
	* makerss.rb: includes copyright notice, shortened text as title when
	there is no subtitle.

2004-11-12 zunda <zunda at freeshell.org>
	* search_control.rb: config form remembers number of agents.
	Works properly even when the user delets an agent and
	push back button to reconfigure it.


2004-11-10 zunda <zunda at freeshell.org>
	* ja/disp_refrrer.rb: better handles links from goo.ne.jp.
	* ja/disp_refrrer.rb: support ocnsearch.goo.ne.jp
	Thanks to Michitaka Ohno (http://bigfield.ddo.jp/diary/20041111.html#p01)

2004-11-10 zunda <zunda at freeshell.org>